here i solve alignment problem of hamburger , solution is horizontal scroll is deactiavte it created problem of margins problem after deactivite it problem solved,, now minor design arrangement is pending for mobile view glasscard in home section

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,15 @@ nav a {
   overflow: hidden;
   
 }
+.no-scroll {
+  overflow: hidden;
+  touch-action: none; /* disables zooming/panning on mobile */
+}
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 
 
 @media (min-width: 1024px) {
